k8s/nginx-deployment.yml
# define deployment, create pods, this is pretty standard formula
# needs a name, chelsea likes to add namespace in case of name conflicts
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tara-nginx
  namespace: tara
  labels:
    app: tara-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tara-nginx
  template:
    metadata:
      name: tara-nginx
      labels:
        app: tara-nginx
    spec:
      containers:
        - name: tara-nginx
          # image is the important part
          # milestones is the namespace
          #first bit is repo, 'latest' is tag
          #image: eydscasandbox.azurecr.io/milestones/custom-nginx:latest
          # not customized, pulled from dockerhub which is the default for unspecified. Try push and deploy this
          #eydscasandbox.azurecr.io/tara/k8s-nginx:latest
          image: nginx:1.23.1
          ports:
            - containerPort: 80
