k8s/nginx.service.yml
# how we connect to the pods, connectiing to the nginx deployment through the defined ports
# by default built as cluster ip
apiVersion: v1
kind: Service
metadata:
  name: tara-nginx
  namespace: tara
spec:
  selector:
    app: tara-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # these are the available types
  #type: ClusterIP, LoadBalancer, NodePort
  type: ClusterIP
