k8s/ingress.yml
# these files are what we're deploying
# allows us to access the server from outside cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tara-ingress
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "false"
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: "tara.k8s.freshworks.club"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tara-nginx
                port:
                  number: 80
